2014/10/18: IGAS v60
    1. Use a more smooth method to handle the mount and toy actions.

2014/10/17: IGAS v58
    1. Fix mount action type, and toy action is added.

2013/11/24: IGAS v56
    1. Fix some mount can't be used in the action system.
    2. Now active layout would be displayed correctly for actived mount.
    3. World marker is added to the action system.

2013/11/13: IGAS v55
    1. Constructor system rebuild.
    2. Init-table system rebuild.
    3. All class files update for the new system.
    4. Overload system added for methods, constructors and meta-methods.

2013/10/20: IGAS v54
    1. New property auto fill system. new independence definition environment.
    2. Fix IFResurrect error.

2013/10/20: IGAS v53
    1. New NoUnitWatch property for UnitFrame, resuce cost for the SecureStateDriver.
    2. IFGroup support a mode only show dead players.

2013/10/18: IGAS v52
    1. Fix the problem that can't use left & right arrow keys when using up & down arrow in a auto-complete list for the MultiLineTextBox

2013/10/07: IGAS v51
    1. Using thread pool to reduce cost of the thread usage.
    2. Fix memory cost for IFClassPower for no use nil var search, resuce memory increment.

2013/10/06: IGAS v50
    1. Fix the scoll position when press enter at the last line of a CodeEditor.

2013/09/16: IGAS v49
    1. New heal absorb features.

2013/09/09: IGAS v48
    1. Fix System.Reflector method error.

2013/09/09: IGAS v47
    1. New property , attribtue system bring into the lua.
    2. Reduce the memory increasement, and reduce the cpu cost to increase the fps.

2013/08/13: IGAS v46
    1. The object oriented program system now all moved to Loop folder, separated from the other part for wow.
    2. Reduce the memory and cpu usage.

2013/08/04: IGAS v45
    1. Remove old unit check to make sure the unit frame's refresh should be done well when point to different raid/party member.

2013/08/03: IGAS v44
    1. Fix the pet's updating for warlock.
